fix list layout spacing

--- a/src/components/MovieList/style.css
+++ b/src/components/MovieList/style.css
@@ -7,8 +7,6 @@
   flex-flow: row wrap;
 }
 .movie-list li {
-  flex: 1;
-  width: 230px;
   margin: 0.5vw;
 }
 .movie-list li:hover {
